# newton-companion

./: .gitignore  README.md  index.html  install.sh  package-lock.json  package.json  vite.config.ts
.claude/worktrees/determined-hamilton/: README.md  dev-reset.sh  index.html  package-lock.json  package.json  setup.sh
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  state.rs
src-tauri/src/ai/: brain.rs  builtin_tools.rs  coordinator.rs  executor.rs  memory.rs  mod.rs  planner.rs  providers.rs  router.rs  types.rs
src-tauri/src/calendar/: google.rs
src-tauri/src/commands/: ai.rs  calendar.rs  course.rs  integrations.rs  mcp.rs  mod.rs  onboarding.rs  settings.rs  sync.rs
src-tauri/src/config/: paths.rs
src-tauri/src/db/: migrations.rs  mod.rs
src-tauri/src/mcp/: manager.rs  protocol.rs
src/app/: layout.tsx  sidebar.tsx
src/components/: empty-state.tsx  newton-logo.tsx  progress-ring.tsx  status-dot.tsx
src/components/ui/: avatar.tsx  button.tsx  card.tsx  dialog.tsx  input.tsx  progress.tsx  scroll-area.tsx  switch.tsx
src/hooks/: use-arena-search.ts  use-mcp.ts  use-newton-auth.ts  use-newton-data.ts
src/lib/: constants.ts  error-utils.ts  newton-parsers.ts  parse-tool-text.ts
src/lib/api/: ai.ts  integrations.ts  mcp.ts  newton.ts
src/pages/arena/: ai-suggestions.tsx  filter-panel.tsx  index.tsx  (+1 more)
src/stores/: brain-store.ts  mcp-store.ts  newton-auth-store.ts  newton-data-store.ts  ui-store.ts
src/types/: ai.ts  newton.ts
(+65 files in other folders)
